--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vanilla-basic",
-  "version": "1.0.0",
+  "name": "grhaweb",
+  "version": "3.0.0",
   "scripts": { 
     "start": "sirv ./src public --cors --single --no-clear --port 8000"
   }
