--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,11 +7,12 @@
 		"args": {
 			// Please look at runtime version support to make sure you're using compatible versions
 			// https://docs.microsoft.com/en-us/azure/azure-functions/supported-languages#languages-by-runtime-version
-			"NODE_VERSION": "16",
+			"NODE_VERSION": "20",
 			"CORE_TOOLS_VERSION": "4"
 		}
 	},
-	"forwardPorts": [ 7071, 4280 ],
+	//"forwardPorts": [ 7071, 4280 ],
+	"forwardPorts": [ 7072, 4281 ],
 
 	// Configure tool-specific properties.
 	"customizations": {
