--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -3,7 +3,8 @@
   "configurations": {
     "grhaweb": {
       "appLocation": "src",
-      "outputLocation": "src"
+      "outputLocation": "src",
+      "apiLocation": "api"
     }
   }
 }
