--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "start": "sirv ./src public --cors --single --no-clear --port 8000"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.1.9"
+    "@azure/static-web-apps-cli": "^2.0.1",
+    "azure-functions-core-tools": "^4.0.5907"
+  },
+  "dependencies": {
+    "grhaweb": "file:"
   }
 }
