Added admin sub-folder

--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -4,6 +4,10 @@
       {
         "route": "/hoadb*",
         "allowedRoles": ["hoadbadmin"]
+      },
+      {
+        "route": "/admin*",
+        "allowedRoles": ["grhaadmin"]
       }
     ],
     "responseOverrides": {
