working on dataql

--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -4,6 +4,7 @@
     "grhaweb": {
       "appLocation": "src",
       "outputLocation": "src",
+      "dataApiLocation": "swa-db-connections",
       "apiLocation": "api"
     }
   }
