--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -2,7 +2,7 @@
   "$schema": "https://github.com/Azure/data-api-builder/releases/download/v1.1.7/dab.draft.schema.json",
   "data-source": {
     "database-type": "cosmosdb_nosql",
-    "connection-string": "@env('DATABASE_CONNECTION_STRING')",
+    "connection-string": "@env('API_COSMOS_DB_CONN_STR')",
     "options": {
       "database": "hoadb",
       "schema": "staticwebapp.database.schema.gql"
