Got photos query working

--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -27,7 +27,7 @@
   },
   "entities": {
     "Book": {
-      "source": "MediaInfoDocs",
+      "source": "MediaInfoDoc",
       "rest": false,
       "graphql": true,
       "permissions": [
