added set of board info from db

--- a/swa-db-connections/staticwebapp.database.config.json
+++ b/swa-db-connections/staticwebapp.database.config.json
@@ -36,6 +36,17 @@
           "role": "anonymous"
         }
       ]
+    },
+    "Board": {
+      "source": "BoardOfTrustees",
+      "rest": false,
+      "graphql": true,
+      "permissions": [
+        {
+          "actions": ["read"],
+          "role": "anonymous"
+        }
+      ]
     }
   }
 }
